fix menu overflow when text wrap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,6 +40,10 @@ a.skiptocontent:focus, .skiptocontent:active {
   border-radius: .25rem;
 }
 
+body {
+  padding-top: 17.4px;
+}
+
 body>.container {
   padding: 60px 10px 0;
 }
